<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<EditText android:layout_width="fill_parent" android:id="@+id/timeEntryDescriptionText"
		android:layout_height="wrap_content" android:inputType="textMultiLine"
		android:layout_weight="1" android:capitalize="sentences" android:gravity="top"
		android:hint="@string/time_entry_description_hint">
		<requestFocus></requestFocus>
	</EditText>
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<Button android:layout_width="wrap_content" android:id="@+id/editTimeEntryTagsButton"
			android:text="@string/time_entry_tags_label" android:layout_height="wrap_content"
			android:layout_weight="1"></Button>
		<Button android:layout_width="wrap_content" android:id="@+id/submitTimeEntryButton"
			android:layout_height="wrap_content" android:text="@string/time_entry_submit_label"
			android:layout_weight="1"></Button>
		<Button android:layout_width="wrap_content" android:id="@+id/cancelTimeEntryButton"
			android:text="@string/cancel_label" android:layout_height="wrap_content"
			android:layout_weight="1"></Button>
	</LinearLayout>
</LinearLayout>
